--- a/main.css
+++ b/main.css
@@ -6,8 +6,9 @@
     font-size: 42pt;
 
     /* Phase 1 */
-
-    /* Your code here 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .example2 {
@@ -15,9 +16,11 @@
     border-radius: 16px;
     padding: 16px;
 
-    /* Phase 2 */
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
 
-    /* Your code here 
+    
 }
 
 .example2 > button {
@@ -45,23 +48,27 @@
     padding: 12px;
 
     /* Phase 3 */
-
-    /* Your code here 
+    display: flex;
+    flex-direction: column;
+    flex: 100%;
+    justify-content: space-between;
+    align-items:    flex-end;
 }
 
 .example4 {
     /* Phase 4 - Part 1 of 2 */
-
-    /* Your code here 
+    display: flex;
+    
+    
 }
 
 .sidebar {
     background-color: black;
     padding: 8px;
-
+    flex: 10%;
     /* Phase 4 - Part 2 of 2 */
 
-    /* Your code here 
+    
 }
 .content-area {
     background-color: #E8EFF0;
